--- a/yeelight-candela-light.conf
+++ b/yeelight-candela-light.conf
@@ -17,8 +17,8 @@
 ###############################################################################
 
 # This device use Bluetooth BLE that is not even close to handle full DMX speed.
-# Have done some tests and you need to wait around 3.5 seconds between every update to prevent time out, 
-# so do not use faders.
+# Have done some tests and you need to wait around 3.5 seconds between every update
+# to prevent time out, so do not use faders.
 
 
 
